# Python-Modules

./: Todolist.md
Python Module 00/ex5/: ft_count_harvest_recursive.py
Python Module 00/ex6/: ft_garden_summary.py
Python Module 00/ex7/: ft_seed_inventory.py
Python Module 01/: ft_garden_data.py  ft_garden_intro.py  ft_garden_security.py  ft_plant_factory.py  ft_plant_growth.py  ft_plant_types.py
Python Module 01/ex0/: ft_garden_intro.py
Python Module 01/ex1/: ft_garden_data.py
Python Module 01/ex2/: ft_plant_growth.py
Python Module 01/ex3/: ft_plant_factory.py
Python Module 01/ex4/: ft_garden_security.py
Python Module 01/ex5/: ft_plant_types.py
Python Module 01/ex6/: ft_garden_analytics.py
Python Module 02/ex0/: ft_first_exception.py
Python Module 02/ex1/: ft_different_errors.py
Python Module 02/ex2/: ft_custom_errors.py
Python Module 02/ex3/: ft_finally_block.py
Python Module 02/ex4/: ft_raise_errors.py
Python Module 02/ex5/: ft_garden_management.py
Python Module 03/: ft_achievement_tracker.py  ft_command_quest.py  ft_coordinate_system.py  ft_score_analytics.py
Python Module 03/ex1/: ft_score_analytics.py
Python Module 03/ex2/: ft_coordinate_system.py
Python Module 05/: check_list
Python Module 06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python Module 07/: Data.txt  __init__.py
Python Module 08/ex01/: loading.py  pyproject.toml  requirements.txt
Python Module 09/: space_crew.py  space_station.py
m6-1/: data_stream.py  nexus_pipeline.py  stream_processor.py
(+54 files in other folders)
