[project]
name = "ex01"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "requests (==2.31.0)",
    "pandas (==2.1.0)",
    "numpy (==1.25.0)",
    "matplotlib (==3.7.2)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false